# edh-catalogue-deploy

./: Dockerfile  Makefile  README.md  environment.release  pyproject.toml
.github/workflows/: build-image.yml  check-uv-lock.yml
